--- a/demo/index.html
+++ b/demo/index.html
@@ -6,16 +6,18 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
 
-		<script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+		<script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 
-		<link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
-		<link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
-		
-		<link rel="import" href="../../paper-item/paper-icon-item.html">
-		<link rel="import" href="../../paper-item/paper-item-body.html">
-		
-		<link rel="import" href="../paper-avatar.html">
+		<script type="module">
+      import '@polymer/iron-demo-helpers/demo-pages-shared-styles';
+      import '@polymer/iron-demo-helpers/demo-snippet';
 
+      import '@polymer/paper-item/paper-icon-item';
+		</script>
+
+		<script type="module" src="../paper-avatar.js"></script>
+
+		<custom-style>
 		<style is="custom-style" include="demo-pages-shared-styles">
 			.vertical-section-container {
 				max-width: 500px;
@@ -29,6 +31,7 @@
 				display: block;
 			}
 		</style>
+		</custom-style>
 	</head>
 	<body>
 	
